# Width-based_backward_search

./: .gitignore  CMakeLists.txt  README.md
BBWS/: README.md  SConstruct  pddl_strip.py
BBWS/fd-version/: .sconsign.dblite  SConstruct  build.py
BBWS/ff-version/: .sconsign.dblite  bench_mark.py  bfws  execution.details  plan.ipc  test.py
BBWS/ff-version/result/: .~lock.result_table_BFWS.xlsx#  result_table_BFWS.xlsx  test_result.csv
BBWS/ff-version/result/problem_and_domain/: duality_blocksaips01.pddl  duality_blocksaips02.pddl  duality_blocksaips03.pddl
BBWS/ipc-2011-duality/blocksworld/: domain_duality.pddl  pbtest.pddl  pbtest_duality.pddl
BBWS/ipc-2011-duality/blocksworld/instances/: blocksaips43.pddl  blocksaips44.pddl  blocksaips45.pddl  blocksaips46.pddl  blocksaips47.pddl  blocksaips48.pddl  blocksaips49.pddl  blocksaips50.pddl  duality_HectorWidthHint.pddl  duality_blocksaips04.pddl  duality_blocksaips05.pddl  duality_blocksaips06.pddl  duality_blocksaips07.pddl  duality_blocksaips08.pddl  duality_blocksaips09.pddl  duality_blocksaips10.pddl  duality_blocksaips11.pddl  (+41 more)
BBWS/src/: bfws_2h.hxx  bfws_2h_M.hxx  bfws_2h_consistency.hxx  bfws_2h_consistency_M.hxx  bfws_4h.hxx  bfws_forward_backward.hxx  landmark_count.hxx  new_node_comparer.hxx  novelty_partition_2.hxx  rp_heuristic_bfws.hxx
LAPKT-public/: README.md
LAPKT-public/include/aptk/: bit_set.hxx  brfs.hxx  ext_math.hxx  heuristic.hxx  iw.hxx  open_list.hxx  search_prob.hxx  serialized_search.hxx  siw.hxx
LAPKT-public/interfaces/agnostic/: action.cxx  action.hxx  bwd_search_prob.cxx  bwd_search_prob.hxx  cond_eff.hxx  fluent.hxx  fwd_search_prob.cxx  fwd_search_prob.hxx  h_1.hxx  h_2.hxx  landmark_count.hxx  landmark_graph.cxx  landmark_graph.hxx  landmark_graph_generator.hxx  landmark_graph_manager.hxx  match_tree.hxx  negation_action.cxx  negation_action.hxx  negation_fluent.cxx  negation_fluent.hxx  novelty.hxx  novelty_partition.hxx  reachability.cxx  reachability.hxx  strips_prob.cxx  strips_prob.hxx  strips_state.cxx  strips_state.hxx  types.hxx
LAPKT-public/interfaces/ff-wrapped/: ff_to_aptk.cxx
LAPKT-public/planners/siw-ffparser/: bench_mark.py  execution.details  siw
src/: main.cxx
(+3 files in other folders)
